# cpp-lib-template

./: CMakeLists.txt  LICENSE  README.md
bench/: CMakeLists.txt  b-core.cpp
code/: CMakeLists.txt
code/mylib/: api.h  mylib.c  mylib.cpp  mylib.h  mylib.hpp
example/: CMakeLists.txt  hello-world.cpp
sandbox/: CMakeLists.txt  sandbox.cpp
scratch/: CMakeLists.txt
test/: CMakeLists.txt  t-ctest.c  t-cxxtest.cpp  x-xtest.c  x-xtest.cpp
